p2/force-app/main/default/objects/Results__c/Results__c.object-meta.xml
<CustomObject>
    <label>Result</label>
    <nameField>
        <label>Results Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>