p2/force-app/main/default/objects/Results__c/fields/Student_Answer__c.field-meta.xml
<CustomField>
    <fullName>Student_Answer__c</fullName>
    <label>Student Answer</label>
    <referenceTo>Student_Answer__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>